ofxNetworkdir=$(includedir)/openFrameworks/addons/ofxNetwork
nobase_ofxNetwork_HEADERS=\
ofxNetwork.h ofxNetworkUtils.h ofxTCPClient.h ofxTCPManager.h ofxTCPServer.h ofxUDPManager.h 
lib_LTLIBRARIES=libofxNetwork.la
libofxNetwork_la_LDFLAGS=-version-info ${OFX_LIB_VERSION}
libofxNetwork_la_SOURCES=\
ofxTCPClient.cpp ofxTCPManager.cpp ofxTCPServer.cpp ofxUDPManager.cpp 
