ofxOpenCvdir=$(includedir)/openFrameworks/addons/ofxOpenCv
nobase_ofxOpenCv_HEADERS=\
ofxCvBlob.h ofxCvColorImage.h ofxCvConstants.h ofxCvContourFinder.h ofxCvFloatImage.h ofxCvGrayscaleImage.h ofxCvImage.h ofxCvMain.h ofxCvShortImage.cpp ofxCvShortImage.h ofxOpenCv.h 
lib_LTLIBRARIES=libofxOpenCv.la
libofxOpenCv_la_LDFLAGS=-version-info ${OFX_LIB_VERSION}
libofxOpenCv_la_SOURCES=\
ofxCvColorImage.cpp ofxCvContourFinder.cpp ofxCvFloatImage.cpp ofxCvGrayscaleImage.cpp ofxCvImage.cpp ofxCvShortImage.cpp 
