ofxOscdir=$(includedir)/openFrameworks/addons/ofxOsc
nobase_ofxOsc_HEADERS=\
ofxOscArg.h ofxOscBundle.h ofxOsc.h ofxOscMessage.h ofxOscReceiver.h ofxOscSender.h 
lib_LTLIBRARIES=libofxOsc.la
libofxOsc_la_LDFLAGS=-version-info ${OFX_LIB_VERSION}
libofxOsc_la_SOURCES=\
ofxOscBundle.cpp ofxOscMessage.cpp ofxOscReceiver.cpp ofxOscSender.cpp 
