ofxVectorGraphicsdir=$(includedir)/openFrameworks/addons/ofxVectorGraphics
nobase_ofxVectorGraphics_HEADERS=\
ofxVectorGraphics.cpp ofxVectorGraphics.h 
lib_LTLIBRARIES=libofxVectorGraphics.la
libofxVectorGraphics_la_LDFLAGS=-version-info ${OFX_LIB_VERSION}
libofxVectorGraphics_la_SOURCES=\
ofxVectorGraphics.cpp 
